--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -4387,6 +4387,41 @@ options</property>
                                       </packing>
                                     </child>
                                     <child>
+                                      <widget class="GtkHBox" id="hbox_line">
+                                        <property name="visible">True</property>
+                                        <child>
+                                          <widget class="GtkLabel" id="label_line">
+                                            <property name="visible">True</property>
+                                            <property name="tooltip" translatable="yes">Width of the line</property>
+                                            <property name="label" translatable="yes">Line</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkSpinButton" id="spin_line">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="tooltip" translatable="yes">Width of the line</property>
+                                            <property name="invisible_char">&#x25CF;</property>
+                                            <property name="adjustment">1 1 5 1 1 0</property>
+                                            <property name="climb_rate">1</property>
+                                            <property name="snap_to_ticks">True</property>
+                                            <property name="numeric">True</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="fill">False</property>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                      </widget>
+                                      <packing>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                    <child>
                                       <widget class="GtkCheckButton" id="checkbutton_margins">
                                         <property name="label" translatable="yes">Margins</property>
                                         <property name="visible">True</property>
@@ -4400,7 +4435,7 @@ options</property>
                                       <packing>
                                         <property name="expand">False</property>
                                         <property name="fill">False</property>
-                                        <property name="position">1</property>
+                                        <property name="position">2</property>
                                       </packing>
                                     </child>
                                   </widget>
